--- a/libraries/STM32F4xx_HAL/SConscript
+++ b/libraries/STM32F4xx_HAL/SConscript
@@ -22,11 +22,9 @@ STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
 STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
 STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
 STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
+STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
+STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c
 ''')
-    
-if GetDepend(['RT_USING_SERIAL']):
-    src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c']
-    src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c']
 
 if GetDepend(['RT_USING_I2C']):
     src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c']
@@ -38,7 +36,7 @@ if GetDepend(['RT_USING_SPI']):
 
 if GetDepend(['RT_USING_USB']):
     src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pccard.c']
-    src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c'] 
+    src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c']
     src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c']
     src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hcd.c']
     src += ['STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c']
