--- a/.config
+++ b/.config
@@ -122,9 +122,33 @@ CONFIG_RT_USING_DFS_V1=y
 # CONFIG_RT_USING_DFS_V2 is not set
 CONFIG_DFS_FILESYSTEMS_MAX=4
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
-# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
+CONFIG_RT_DFS_ELM_LFN_UNICODE=0
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=2
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
+# CONFIG_RT_DFS_ELM_USE_EXFAT is not set
 CONFIG_RT_USING_DFS_DEVFS=y
-# CONFIG_RT_USING_DFS_ROMFS is not set
+CONFIG_RT_USING_DFS_ROMFS=y
+CONFIG_RT_USING_DFS_ROMFS_USER_ROOT=y
 # CONFIG_RT_USING_DFS_CROMFS is not set
 # CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_DFS_TMPFS is not set
@@ -170,7 +194,7 @@ CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_DEV_BUS is not set
 # CONFIG_RT_USING_WIFI is not set
 # CONFIG_RT_USING_VIRTIO is not set
-# CONFIG_RT_USING_PIN is not set
+CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_KTIME is not set
 # CONFIG_RT_USING_HWTIMER is not set
 
@@ -587,7 +611,7 @@ CONFIG_PKG_CHERRYUSB_DEVICE_DWC2_ST=y
 # CONFIG_PKG_CHERRYUSB_DEVICE_PUSB2 is not set
 CONFIG_PKG_CHERRYUSB_DEVICE_CDC_ACM=y
 # CONFIG_PKG_CHERRYUSB_DEVICE_HID is not set
-# CONFIG_PKG_CHERRYUSB_DEVICE_MSC is not set
+CONFIG_PKG_CHERRYUSB_DEVICE_MSC=y
 # CONFIG_PKG_CHERRYUSB_DEVICE_AUDIO is not set
 # CONFIG_PKG_CHERRYUSB_DEVICE_VIDEO is not set
 # CONFIG_PKG_CHERRYUSB_DEVICE_CDC_RNDIS is not set
@@ -1196,8 +1220,8 @@ CONFIG_SOC_SERIES_STM32F4=y
 CONFIG_BSP_USING_USB=y
 # CONFIG_BSP_USING_USB_OTG_FS is not set
 CONFIG_BSP_USING_USB_OTG_HS=y
-CONFIG_BSP_USING_USB_DEVICE=y
-# CONFIG_BSP_USING_USB_HOST is not set
+# CONFIG_BSP_USING_USB_DEVICE is not set
+CONFIG_BSP_USING_USB_HOST=y
 # CONFIG_BSP_USING_USB_TO_USART is not set
 # CONFIG_BSP_USING_COM2 is not set
 # CONFIG_BSP_USING_COM3 is not set
@@ -1215,7 +1239,7 @@ CONFIG_BSP_USING_USB_DEVICE=y
 #
 # On-chip Peripheral Drivers
 #
-# CONFIG_BSP_USING_GPIO is not set
+CONFIG_BSP_USING_GPIO=y
 CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
