--- a/board/SConscript
+++ b/board/SConscript
@@ -51,6 +51,8 @@ if GetDepend(['PKG_USING_CHERRYUSB']):
     src += Glob('ports/CherryUSB/demo/*.c')
     path += [cwd + '/ports/CherryUSB']
 
+src += Glob('ports/romfs.c')
+
 startup_path_prefix = SDK_LIB
 
 if rtconfig.PLATFORM in ['gcc']:
