--- a/.config
+++ b/.config
@@ -153,6 +153,7 @@ CONFIG_RT_USING_DFS_ROMFS_USER_ROOT=y
 # CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_DFS_TMPFS is not set
 # CONFIG_RT_USING_DFS_MQUEUE is not set
+# CONFIG_RT_USING_DFS_NFS is not set
 # CONFIG_RT_USING_FAL is not set
 
 #
@@ -248,8 +249,74 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # Network
 #
 # CONFIG_RT_USING_SAL is not set
-# CONFIG_RT_USING_NETDEV is not set
-# CONFIG_RT_USING_LWIP is not set
+CONFIG_RT_USING_NETDEV=y
+CONFIG_NETDEV_USING_IFCONFIG=y
+CONFIG_NETDEV_USING_PING=y
+CONFIG_NETDEV_USING_NETSTAT=y
+# CONFIG_NETDEV_USING_AUTO_DEFAULT is not set
+# CONFIG_NETDEV_USING_IPV6 is not set
+CONFIG_NETDEV_IPV4=1
+CONFIG_NETDEV_IPV6=0
+# CONFIG_NETDEV_IPV6_SCOPES is not set
+CONFIG_RT_USING_LWIP=y
+# CONFIG_RT_USING_LWIP_LOCAL_VERSION is not set
+# CONFIG_RT_USING_LWIP141 is not set
+# CONFIG_RT_USING_LWIP203 is not set
+CONFIG_RT_USING_LWIP212=y
+# CONFIG_RT_USING_LWIP_LATEST is not set
+CONFIG_RT_USING_LWIP_VER_NUM=0x20102
+# CONFIG_RT_USING_LWIP_IPV6 is not set
+CONFIG_RT_LWIP_MEM_ALIGNMENT=4
+CONFIG_RT_LWIP_IGMP=y
+CONFIG_RT_LWIP_ICMP=y
+# CONFIG_RT_LWIP_SNMP is not set
+CONFIG_RT_LWIP_DNS=y
+CONFIG_RT_LWIP_DHCP=y
+CONFIG_IP_SOF_BROADCAST=1
+CONFIG_IP_SOF_BROADCAST_RECV=1
+
+#
+# Static IPv4 Address
+#
+CONFIG_RT_LWIP_IPADDR="192.168.1.30"
+CONFIG_RT_LWIP_GWADDR="192.168.1.1"
+CONFIG_RT_LWIP_MSKADDR="255.255.255.0"
+CONFIG_RT_LWIP_UDP=y
+CONFIG_RT_LWIP_TCP=y
+CONFIG_RT_LWIP_RAW=y
+# CONFIG_RT_LWIP_PPP is not set
+CONFIG_RT_MEMP_NUM_NETCONN=8
+CONFIG_RT_LWIP_PBUF_NUM=32
+CONFIG_RT_LWIP_RAW_PCB_NUM=4
+CONFIG_RT_LWIP_UDP_PCB_NUM=4
+CONFIG_RT_LWIP_TCP_PCB_NUM=4
+CONFIG_RT_LWIP_TCP_SEG_NUM=40
+CONFIG_RT_LWIP_TCP_SND_BUF=8196
+CONFIG_RT_LWIP_TCP_WND=8196
+CONFIG_RT_LWIP_TCPTHREAD_PRIORITY=10
+CONFIG_RT_LWIP_TCPTHREAD_MBOX_SIZE=8
+CONFIG_RT_LWIP_TCPTHREAD_STACKSIZE=1024
+CONFIG_LWIP_NO_RX_THREAD=y
+CONFIG_LWIP_NO_TX_THREAD=y
+CONFIG_RT_LWIP_ETHTHREAD_PRIORITY=12
+CONFIG_RT_LWIP_ETHTHREAD_STACKSIZE=1024
+CONFIG_RT_LWIP_ETHTHREAD_MBOX_SIZE=8
+# CONFIG_RT_LWIP_REASSEMBLY_FRAG is not set
+CONFIG_LWIP_NETIF_STATUS_CALLBACK=1
+CONFIG_LWIP_NETIF_LINK_CALLBACK=1
+CONFIG_RT_LWIP_NETIF_NAMESIZE=6
+CONFIG_SO_REUSE=1
+CONFIG_LWIP_SO_RCVTIMEO=1
+CONFIG_LWIP_SO_SNDTIMEO=1
+CONFIG_LWIP_SO_RCVBUF=1
+CONFIG_LWIP_SO_LINGER=0
+# CONFIG_RT_LWIP_NETIF_LOOPBACK is not set
+CONFIG_LWIP_NETIF_LOOPBACK=0
+# CONFIG_RT_LWIP_STATS is not set
+# CONFIG_RT_LWIP_USING_HW_CHECKSUM is not set
+CONFIG_RT_LWIP_USING_PING=y
+# CONFIG_LWIP_USING_DHCPD is not set
+# CONFIG_RT_LWIP_DEBUG is not set
 # CONFIG_RT_USING_AT is not set
 
 #
@@ -653,11 +720,11 @@ CONFIG_PKG_CHERRYUSB_HOST_DWC2_ST=y
 # CONFIG_PKG_CHERRYUSB_HOST_MUSB_CUSTOM is not set
 # CONFIG_PKG_CHERRYUSB_HOST_PUSB2 is not set
 # CONFIG_PKG_CHERRYUSB_HOST_XHCI is not set
-# CONFIG_PKG_CHERRYUSB_HOST_CDC_ACM is not set
+CONFIG_PKG_CHERRYUSB_HOST_CDC_ACM=y
 # CONFIG_PKG_CHERRYUSB_HOST_HID is not set
-CONFIG_PKG_CHERRYUSB_HOST_MSC=y
+# CONFIG_PKG_CHERRYUSB_HOST_MSC is not set
 # CONFIG_PKG_CHERRYUSB_HOST_CDC_ECM is not set
-# CONFIG_PKG_CHERRYUSB_HOST_CDC_RNDIS is not set
+CONFIG_PKG_CHERRYUSB_HOST_CDC_RNDIS=y
 # CONFIG_PKG_CHERRYUSB_HOST_CDC_NCM is not set
 # CONFIG_PKG_CHERRYUSB_HOST_VIDEO is not set
 # CONFIG_PKG_CHERRYUSB_HOST_AUDIO is not set
@@ -668,6 +735,7 @@ CONFIG_PKG_CHERRYUSB_HOST_MSC=y
 # CONFIG_PKG_CHERRYUSB_HOST_CH34X is not set
 # CONFIG_PKG_CHERRYUSB_HOST_CP210X is not set
 # CONFIG_PKG_CHERRYUSB_HOST_PL2303 is not set
+CONFIG_CONFIG_USBHOST_PLATFORM_CDC_RNDIS=y
 # CONFIG_PKG_CHERRYUSB_HOST_TEMPLATE is not set
 CONFIG_PKG_CHERRYUSB_PATH="/packages/system/CherryUSB"
 # CONFIG_PKG_USING_CHERRYUSB_LATEST_VERSION is not set
@@ -1213,6 +1281,8 @@ CONFIG_SOC_SERIES_STM32F4=y
 #
 # Hardware Drivers Config
 #
+CONFIG_PBUF_POOL_BUFSIZE=1600
+CONFIG_LWIP_TCPIP_CORE_LOCKING_INPUT=1
 
 #
 # Onboard Peripheral Drivers
