支持 IM 数据修改

--- a/.config
+++ b/.config
@@ -21,7 +21,7 @@ CONFIG_RT_THREAD_PRIORITY_32=y
 # CONFIG_RT_THREAD_PRIORITY_256 is not set
 CONFIG_RT_THREAD_PRIORITY_MAX=32
 CONFIG_RT_TICK_PER_SECOND=1000
-# CONFIG_RT_USING_OVERFLOW_CHECK is not set
+CONFIG_RT_USING_OVERFLOW_CHECK=y
 # CONFIG_RT_USING_HOOK is not set
 # CONFIG_RT_USING_HOOKLIST is not set
 # CONFIG_RT_USING_IDLE_HOOK is not set
